--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.6.6",
+    "vue-i18n": "^8.8.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -27,6 +29,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "mockjs": "^1.0.1-beta3",
     "vue-template-compiler": "^2.5.21"
   }
 }
