--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0-beta.2",
+    "@vue/babel-preset-jsx": "^1.0.0-beta.2",
     "axios": "^0.18.0",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.6",
