--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
     "mint-ui": "^2.2.13",
+    "url-parse": "^1.4.4",
     "vue": "^2.6.6",
     "vue-i18n": "^8.8.2",
     "vue-router": "^3.0.1",
