--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.0",
     "express": "^4.16.4",
     "mint-ui": "^2.2.13",
     "url-parse": "^1.4.4",
